fixed grid column gap
increased from 1.111% to 11.111%

--- a/css/screen.css
+++ b/css/screen.css
@@ -132,7 +132,7 @@ audio {
   .cssgrid #content{
     display: grid;
     /*grid-template-columns: repeat(2, 1fr);*/
-    grid-column-gap: 1.111%;
+    grid-column-gap: 11.111%;
     width:auto;
   }
   .cssgrid #primary{
